splitの際のbreakKeyを指定できる設定を追加